<resources>
  <string name="app_name">WaiterApp</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_login">Oaxaca</string>

  <!-- Strings related to login -->
  <string name="prompt_username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Login</string>
  <string name="action_sign_in_short">Login</string>
  <string name="error_invalid_username">This username is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

  <string name="food">Food</string>
  <string name="quantity">Quantity</string>
  <string name="price">Price</string>
  <string name="Orders">Orders</string>
  <string name="refresh">Refresh</string>
  <string name="change_status_of_order">Change status of order:</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="change_menu">Change Menu</string>
  <string name="available">Available</string>
  <string name="not_available">Not Available</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">+</string>
  <string name="minus">-</string>
    <string name="cancel_order">Cancel Order</string>
  <string name="add_items">Add Items</string>
  <string name="remove_items">Remove Items</string>
  <string name="changeMenu">Change Menu</string>
</resources>
