<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <TableLayout
            android:id="@+id/detailsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/custom_border"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TableRow>

                <TextView
                    android:id="@+id/food"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="28sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/food" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="28sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textSize="28sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:text="@string/quantity" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirmEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:srcCompat="@android:drawable/ic_menu_upload" />

</android.support.design.widget.CoordinatorLayout>
